--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.1.0",
     "cssnano": "^4.1.10",
+    "cz-conventional-changelog": "^3.0.2",
     "file-loader": "^4.1.0",
     "glob": "^7.1.4",
     "html-webpack-externals-plugin": "^3.8.0",
@@ -55,5 +56,10 @@
     "lib-flexible": "^0.3.2",
     "react-plugin-test-xy": "^1.0.0",
     "webpack-dev-middleware": "^3.7.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
